install-meta (0.1.11) UNRELEASED; urgency=low

  * NOT RELEASED YET

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Thu, 10 May 2007 15:01:28 +0200

install-meta (0.1.10) unstable; urgency=low

  * update packages
  * not resizeable
  * change sidux.jpg to sidux.png 

 -- Horst Tritremmel <hjt@sidux.com>  Thu, 10 May 2007 12:59:34 +0200

install-meta (0.1.9) unstable; urgency=low

  * replace the other automake1.9 files appropriately.
  * build-depend of automake1.9.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Tue, 08 May 2007 12:29:47 +0200

install-meta (0.1.8) unstable; urgency=low

  * symlinks for config.sub/ config.guess are bad for checkouts, revert to an
    adapted copying on use.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Tue, 08 May 2007 12:07:51 +0200

install-meta (0.1.7) unstable; urgency=low

  * new meta icon fix 

 -- Horst Tritremmel <hjt@sidux.com>  Mon, 07 May 2007 10:28:41 +0200

install-meta (0.1.6) unstable; urgency=low

  * use new icon

 -- Joaquim Boura <x-un-i@sidux.com>  Sun, 06 May 2007 21:14:44 +0200

install-meta (0.1.5) unstable; urgency=low

  * new/update metapackages

 -- Horst Tritremmel <hjt@sidux.com>  Fri, 04 May 2007 12:32:55 +0200

install-meta (0.1.4) unstable; urgency=low

  * really install icons where they belong.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Mon, 30 Apr 2007 02:49:35 +0200

install-meta (0.1.3) unstable; urgency=low

  * add new XDG icons from Cathbard.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Mon, 30 Apr 2007 02:03:56 +0200

install-meta (0.1.2) unstable; urgency=low

  * bash modules are sourced, they should not be executable.
  * add myself to uploaders.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Thu, 26 Apr 2007 01:59:50 +0200

install-meta (0.1.1) unstable; urgency=low

  * Metapackage Education V2

 -- Horst Tritremmel <hjt@sidux.com>  Wed, 25 Apr 2007 21:08:01 +0200

install-meta (0.1.0) unstable; urgency=low

  * add non-free handling for install to hd