@@ -524,8 +524,8 @@ or use   --dir=&lt;dir&gt;
 	  <property name="ypad">0</property>
 	</widget>
 	<packing>
-	  <property name="x">544</property>
-	  <property name="y">8</property>
+	  <property name="x">528</property>
+	  <property name="y">0</property>
 	</packing>
       </child>
 
@@ -550,15 +550,41 @@ or use   --dir=&lt;dir&gt;
 	  <property name="angle">0</property>
 	</widget>
 	<packing>
-	  <property name="x">32</property>
-	  <property name="y">8</property>
+	  <property name="x">8</property>
+	  <property name="y">0</property>
+	</packing>
+      </child>
+
+      <child>
+	<widget class="GtkLabel" id="label22">
+	  <property name="width_request">734</property>
+	  <property name="height_request">30</property>
+	  <property name="visible">True</property>
+	  <property name="label" translatable="yes">&lt;span foreground=&quot;red&quot; font_desc=&quot;Sans Bold 12&quot;&gt;To use this feature, make sure you are connected to the internet.&lt;/span&gt;</property>
+	  <property name="use_underline">False</property>
+	  <property name="use_markup">True</property>
+	  <property name="justify">GTK_JUSTIFY_LEFT</property>
+	  <property name="wrap">False</property>
+	  <property name="selectable">False</property>
+	  <property name="xalign">0</property>
+	  <property name="yalign">0.5</property>
+	  <property name="xpad">0</property>
+	  <property name="ypad">0</property>
+	  <property name="ellipsize">PANGO_ELLIPSIZE_NONE</property>
+	  <property name="width_chars">-1</property>
+	  <property name="single_line_mode">False</property>
+	  <property name="angle">0</property>
+	</widget>
+	<packing>
+	  <property name="x">8</property>
+	  <property name="y">32</property>
 	</packing>
       </child>
 
       <child>
 	<widget class="GtkNotebook" id="notebook1">
 	  <property name="width_request">784</property>
-	  <property name="height_request">544</property>
+	  <property name="height_request">494</property>
 	  <property name="visible">True</property>
 	  <property name="can_focus">True</property>
 	  <property name="show_tabs">True</property>
@@ -630,29 +656,9 @@ or use   --dir=&lt;dir&gt;
 	      </child>
 
 	      <child>
-		<widget class="GtkCheckButton" id="checkbutton_yes">
-		  <property name="width_request">297</property>
-		  <property name="height_request">28</property>
-		  <property name="visible">True</property>
-		  <property name="can_focus">True</property>
-		  <property name="label" translatable="yes">use option --yes for apt-get install</property>
-		  <property name="use_underline">True</property>
-		  <property name="relief">GTK_RELIEF_NORMAL</property>
-		  <property name="focus_on_click">True</property>
-		  <property name="active">True</property>
-		  <property name="inconsistent">False</property>
-		  <property name="draw_indicator">True</property>
-		</widget>
-		<packing>
-		  <property name="x">288</property>
-		  <property name="y">477</property>
-		</packing>
-	      </child>
-
-	      <child>
 		<widget class="GtkScrolledWindow" id="scrolledwindow1">
 		  <property name="width_request">721</property>
-		  <property name="height_request">457</property>
+		  <property name="height_request">400</property>
 		  <property name="visible">True</property>
 		  <property name="can_focus">True</property>
 		  <property name="hscrollbar_policy">GTK_POLICY_AUTOMATIC</property>
@@ -663,7 +669,7 @@ or use   --dir=&lt;dir&gt;
 		  <child>
 		    <widget class="GtkTreeView" id="treeview1">
 		      <property name="width_request">248</property>
-		      <property name="height_request">136</property>
+		      <property name="height_request">96</property>
 		      <property name="visible">True</property>
 		      <property name="can_focus">True</property>
 		      <property name="headers_visible">True</property>
@@ -760,7 +766,27 @@ or use   --dir=&lt;dir&gt;
 		</widget>
 		<packing>
 		  <property name="x">48</property>
-		  <property name="y">475</property>
+		  <property name="y">425</property>
+		</packing>
+	      </child>
+
+	      <child>
+		<widget class="GtkCheckButton" id="checkbutton_yes">
+		  <property name="width_request">297</property>
+		  <property name="height_request">28</property>
+		  <property name="visible">True</property>
+		  <property name="can_focus">True</property>
+		  <property name="label" translatable="yes">use option --yes for apt-get install</property>
+		  <property name="use_underline">True</property>
+		  <property name="relief">GTK_RELIEF_NORMAL</property>
+		  <property name="focus_on_click">True</property>
+		  <property name="active">True</property>
+		  <property name="inconsistent">False</property>
+		  <property name="draw_indicator">True</property>
+		</widget>
+		<packing>
+		  <property name="x">288</property>
+		  <property name="y">427</property>
 		</packing>
 	      </child>
 
@@ -840,7 +866,7 @@ or use   --dir=&lt;dir&gt;
 		</widget>
 		<packing>
 		  <property name="x">600</property>
-		  <property name="y">475</property>
+		  <property name="y">425</property>
 		</packing>
 	      </child>
 	    </widget>
@@ -1199,7 +1225,7 @@ see non-free category &lt;/span&gt; </property>
 	</widget>
 	<packing>
 	  <property name="x">0</property>
-	  <property name="y">48</property>
+	  <property name="y">72</property>
 	</packing>
       </child>
     </widget>
